# QAS-Editor

./: .gitattributes  .gitignore  .pylintrc  README.md  __init__.py  answer.py  pyproject.toml  python-package.yml  qas_editor.py  qas_enums.py  questions.py  quiz.py  requirements.txt  setup.py  test.json  test.py  test.xml  test_package.py  utils.py
.github/workflows/: flake8.yml  pdoc.yaml  pylint.yml  pytest.yml  regression.yml
examples/: moodle.xml
qas_editor/: __init__.py  __main__.py  answer.py  category.py  enums.py  formulary.py  gui.py  processors.py  question.py  questions.py  quiz.py  test_package.py  utils.py  wrappers.py
qas_editor/_parsers/: aiken.py  bb.py  blackboard.py  canvas_lms.py  cloze.py  csv_card.py  csv_cards.py  edx.py  gift.py  hdf5.py  imscc.py  json.py  kahoot.py  latex.py  markdown.py  moodle.py  olx.py  pdf.py  qti1v2.py  qti_1_2.py  qti_1_2_canvas.py  quizlet.py
qas_editor/_parsers/ims/: __init__.py  all.py  bb.py  canvas.py  imscc.py  qti1v2.py
qas_editor/_parsers/qti/: __init__.py  bb.py  canvas.py  imscc.py  qti1v2.py
qas_editor/gui/: __init__.py  exams.py  forms.py  layout.py  main.py  popup.py  popups.py  stylesheet.css  utils.py  widget.py  window.py
qas_editor/parsers/: aiken.py  cloze.py  csv_card.py  gift.py  kahoot.py  latex.py  markdown.py  moodle.py  odf.py  olx.py  text.py
qas_editor/parsers/ims/: all.py  bb.py  canvas.py  qti1v2.py
test/datasets/aiken/: aiken_1.txt
test/datasets/anki/: English Grammar In Use Exercises.txt  math.txt
test/datasets/cloze/: cloze.cloze
test/datasets/gift/: essay.gift  matching.gift  missing_words.gift  multichoice.gift  numericals.gift  shorts.gift  (+1 more)
test/test_api/: test_containers.py  test_ftext.py  test_processors.py  test_question.py
test/test_feature/: test_ftext.py
test/test_gui/: test_popup.py  test_widgets.py
test/test_parser/: test_aiken.py  test_cloze.py  test_csv_card.py  test_gift.py  test_json.py  test_kahoot.py  test_latex.py  test_moodle.py  test_odf.py  test_olx.py  test_qti.py  test_qti1v2.py  test_qti2v1.py
test_gui/: test_widgets.py
test_lib/: test_aiken.py  test_cloze.py  test_gift.py  test_json.py  test_kahoot.py  test_latex.py  test_moodle.py  test_pdf.py
testcases/: aiken.txt  cloze.cloze  default.json  gift.gift  latextomoodle.tex  moodle.xml  moodle_2.xml  moodle_essay1.xml
tests/: test_aiken.py  test_io.py  test_moodle.py
tests/datasets/: default.json  markdown.md  moodle.xml  moodle.xml.tmp
(+112 files in other folders)
